argocd/pod-jenkins.yml
apiVersion: v1
kind: Pod
metadata:
  name: jenkins-proxy
  namespace: default
  labels:
    app: jenkins-proxy
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: config-volume
      mountPath: /etc/nginx/conf.d
  volumes:
  - name: config-volume
    configMap:
      name: jenkins-nginx-conf
