argocd/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-proxy-service
  namespace: default
spec:
  selector:
    app: jenkins-proxy
  ports:
  - port: 80
    targetPort: 80
